fixed wrong padding in custom.css

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -200,7 +200,7 @@ border-top-left-radius: 0;
   padding:0
 }
 .item {
-  padding:0 24px 15px 0;
+  padding:0 24px 0;
   text-align: center;
 }
 item img{max-width:100%}
